--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,4 @@
-name: 自动部署 Hexo 并同步分支
+name: 自动部署 Hexo 并同步到 main 分支
 
 on:
   push:
@@ -27,15 +27,9 @@ jobs:
       - name: 生成静态文件
         run: hexo generate
 
-      - name: 部署到 main 分支 (静态网页)
+      - name: 部署到 main 分支
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./public
           publish_branch: main
-
-      - name: 同步 Master 源码到 Main
-        run: |
-          git config user.name github-actions
-          git config user.email github-actions@github.com
-          git push origin master:main --force
