Update source/_data/brevity.yml by Qexo

--- a/source/_data/brevity.yml
+++ b/source/_data/brevity.yml
@@ -1,3 +1,12 @@
+- content: 回老家喽～！✋再见南宁🤚。
+  date: 2026-02-01 16:138gl
+  image:
+    - url: https://imgbed.138gl.com/file/blog/即刻/IMG_20260201_155618.webp
+    - url: https://imgbed.138gl.com/file/blog/即刻/IMG_20260201_154247.webp
+    - url: https://imgbed.138gl.com/file/blog/即刻/IMG_20260201_154353_edit_116127351978632(1).webp
+    - url: https://imgbed.138gl.com/file/blog/即刻/IMG_20260201_154353_1_edit_116920664500386.webp
+    - url: https://imgbed.138gl.com/file/blog/即刻/IMG_20260201_154757.webp
+
 - content: 南宁最近真的很冷~！
   date: 2026-01-22 00:00
 
